--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "serve": "node express-server/server.js"
   },
   "keywords": [
     "slider",
@@ -26,6 +27,7 @@
     "chalk": "^5.0.1"
   },
   "devDependencies": {
+    "body-parser": "^1.20.0",
     "events": "^3.3.0",
     "express": "^4.18.1"
   }
